# thedes-game

./: Cargo.toml
design/: .$clientserver.drawio.bkp  .$clientserver.drawio.dtmp  clientserver.drawio
src/: app.rs  domain.rs  lib.rs
src/app/: local_tui.rs
src/client/tui/: default.rs
src/domain/: biome.rs  block.rs  client.rs  entity.rs  error.rs  event.rs  ground.rs  id.rs  map.rs  server.rs  thede.rs
src/domain/entity/: human.rs  npc.rs  player.rs
src/event/: memory.rs
src/server/: default.rs
